@@ -56,7 +56,7 @@ test.write(['src', 'SConscript'], SConscript_contents%{'HOST_ARCH': host_arch})
 
 test.run(arguments=".")
 
-project_guid = "{25F6CE89-8E22-2910-8B6E-FFE6DC1E2792}"
+project_guid = "{CB4637F1-2205-50B7-B115-DCFA0DA68FB1}"
 vcproj = test.read(['src', 'Test.vcproj'], 'r')
 expect = test.msvs_substitute(expected_vcprojfile, '7.0', None, 'SConstruct',
                               project_guid=project_guid)
